# wvm-aws-sdk-s3

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  db.sql
crates/base/: Cargo.toml
crates/base/src/: lib.rs  main.rs  mod.rs
crates/base/src/error/: s3_load_errors.rs
crates/base/src/s3/: aws_config.rs  bucket.rs  client.rs  object.rs
crates/base/src/s3/builders/: create_bucket.rs  delete_bucket.rs  delete_object.rs  get_object.rs  list_buckets.rs  list_objects.rs  mod.rs  put_object.rs
crates/base/src/utils/: constants.rs  env_utils.rs  mod.rs  planetscale.rs  stream.rs  wvm_bundler.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/planetscale/: Cargo.toml
crates/planetscale/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: actix_web_service.rs  main.rs
crates/server/src/db/: mod.rs  schema.rs
crates/server/src/handlers/: mod.rs
crates/server/src/handlers/buckets/: mod.rs
crates/server/src/middleware/: mod.rs
crates/server/src/services/: db_service.rs  mod.rs  wvm_s3_services.rs
crates/server/src/services/buckets/: bucket_service.rs
k8s/: deployment.yaml  service.yaml
server/: Cargo.toml
server/src/: actix_web_service.rs  main.rs  permission_container.rs
server/src/error/: mod.rs  s3_load_errors.rs
server/src/handlers/: mod.rs
server/src/handlers/buckets/: mod.rs
server/src/handlers/fs/: mod.rs
server/src/middleware/: mod.rs
server/src/services/: auth_service.rs  mod.rs  wvm_s3_services.rs
server/src/services/buckets/: bucket_service.rs  mod.rs
server/src/utils/: auth.rs  mod.rs  object.rs  time.rs  vars.rs
src/: main.rs  mod.rs
src/s3/: account.rs  aws_config.rs  bucket.rs  client.rs  mod.rs  object.rs
src/s3/builders/: builders.rs  create_bucket.rs  delete_bucket.rs  delete_object.rs  get_object.rs  list_buckets.rs  list_objects.rs  mod.rs  put_object.rs
src/utils/: constants.rs  env_utils.rs  mod.rs  planetscale.rs  wvm.rs  wvm_bundler.rs
