[package]
name = "wvm-aws-sdk-s3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
bundler = { git = "https://github.com/weaveVM/bundler", branch = "main" }
alloy = "0.11.0"
planetscale-driver = "0.5.1"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = {version = "1.43.0", features = ["full"]}
