[workspace.package]
name = "wvm-aws-sdk-s3"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "./crates/base",
    "./crates/macros",
    "./crates/server",
    "./crates/planetscale"
]

[workspace.dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
bundler = { git = "https://github.com/weaveVM/bundler", branch = "main" }
alloy = "0.11.0"
planetscale-driver = "0.5.1"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = {version = "1.43.0", features = ["full"]}
chrono = {version = "0.4.39", features = ["serde"] }
syn = { version = "2" }
quote = { version = "1" }
proc-macro2 = "1"

# shuttle requirements
shuttle-shared-db = { version = "0.52.0", features = ["diesel-async-bb8", "postgres"] }
diesel = { version = "2", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["deadpool"] }
shuttle-diesel-async = { git = "https://github.com/aumetra/shuttle-diesel-async", version = "0.1.0", features = ["bb8", "deadpool"] }
actix-web = "4.3.1"
shuttle-runtime = "0.50.0"