[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
shuttle-actix-web = "0.53.0"
shuttle-runtime = "0.53.0"
anyhow.workspace = true
dotenv.workspace = true
bundler.workspace = true
alloy.workspace = true
planetscale-driver.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
async-trait = "0.1.86"
num_cpus = "1.16.0"
shuttle-shared-db.workspace = true
shuttle-diesel-async.workspace = true
actix-web.workspace = true
planetscale = { path = "../crates/planetscale" }
base = { path = "../crates/base" }
ureq.workspace = true
xmlwriter = "0.1.0"