[package]
name = "base"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wvm-s3"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
dotenv.workspace = true
bundler.workspace = true
alloy.workspace = true
planetscale-driver.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
macros = { path = "../macros" }
planetscale = { path = "../planetscale" }