[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wvm-s3-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
dotenv.workspace = true
bundler.workspace = true
alloy.workspace = true
planetscale-driver.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
async-trait = "0.1.86"
num_cpus = "1.16.0"
shuttle-shared-db.workspace = true
diesel = { workspace = true, features = ["serde_json"]}
diesel-async.workspace = true
shuttle-diesel-async.workspace = true
actix-web.workspace = true
shuttle-runtime.workspace = true
planetscale = { path = "../planetscale" }
base = { path = "../base" }